# aegispdf

./: .gitignore  .gitleaks.toml  Makefile  README.md  aegispdf.gpg  eslint.config.js  index.html  install.sh  package-lock.json  package.json
.github/: CODEOWNERS  SECURITY.md  branch-protection.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages
scripts/: gen-icons.sh  gen-placeholder-icons.py  setup-dev-linux.sh  setup-dev-windows.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/appdata/: dev.aegispdf.app.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/debian/: postinst  postrm  prerm
src-tauri/mime/: aegispdf-types.xml
src-tauri/rpm/: postinstall  postremove  preremove
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: annotations.rs  compress.rs  detection.rs  merge.rs  mod.rs  ocr.rs  pages.rs  pdf.rs  security.rs  split.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/render/: mod.rs  pdfium_renderer.rs
src-tauri/tests/: annotations_tests.rs  compress_tests.rs  error_tests.rs  merge_split.rs  pdf_workspace_tests.rs  security_tests.rs
src-tauri/tests/common/: mod.rs
src/components/: PageCard.tsx  PageGrid.tsx  RightPanel.tsx  Toolbar.tsx
src/hooks/: useJobEvents.ts  usePdfWorkspace.ts
src/services/: api.ts
