[package]
name = "aegispdf"
version = "0.2.2"
description = "AegisPDF desktop workspace"
authors = ["AegisPDF"]
license = "MIT"
edition = "2021"

[lib]
name = "aegispdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
flate2 = "1.1.2"
image = { version = "0.25.8", default-features = false, features = ["png"] }
lopdf = "0.38.0"
pdfium-render = "0.8.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-fs = "2.4.2"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tempfile = "3.19.1"
